# bazel-spm-rules-bug

./: .bazelrc  .gitignore  BUILD  MODULE.bazel  Package.swift  swift_deps_index.json
Sources/: HelloWorld.swift
