bazel_dep(name = "rules_swift", version = "1.10.0")
bazel_dep(name = "rules_swift_package_manager", version = "0.8.0")
bazel_dep(name = "gazelle", version = "0.32.0")
# swift_deps START
swift_deps = use_extension(
    "@rules_swift_package_manager//:extensions.bzl",
    "swift_deps",
)
swift_deps.from_file(
    deps_index = "//:swift_deps_index.json",
)
use_repo(
    swift_deps,
    "swiftpkg_messagekit",
)
# swift_deps END
